WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71890
[GTK][DRT] window internals object is not reset after each test
https://bugs.webkit.org/show_bug.cgi?id=71890
Summary
[GTK][DRT] window internals object is not reset after each test
Philippe Normand
Reported
2011-11-09 04:55:11 PST
If a test for instance modifies the Pagination setting, the next tests not explicitely resetting that setting will fail or simply appear flaky. Proper fix would be to call WebCoreTestSupport::resetInternalsObject() when needed, like mac and qt do...
Attachments
proposed patch
(4.15 KB, patch)
2011-11-09 04:58 PST
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
updated patch
(5.68 KB, patch)
2011-11-09 11:55 PST
,
Philippe Normand
mrobinson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2011-11-09 04:58:36 PST
Created
attachment 114252
[details]
proposed patch
Xan Lopez
Comment 2
2011-11-09 05:05:55 PST
Comment on
attachment 114252
[details]
proposed patch Dunno if it makes sense to share this with Qt or not, but looks good to me. Good catch.
WebKit Review Bot
Comment 3
2011-11-09 05:07:30 PST
Attachment 114252
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/gtk/ChangeLog', u'Source/Web..." exit_code: 1 Source/WebKit/gtk/WebCoreSupport/DumpRenderTreeSupportGtk.cpp:70: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Philippe Normand
Comment 4
2011-11-09 05:15:05 PST
Committed
r99691
: <
http://trac.webkit.org/changeset/99691
>
Csaba Osztrogonác
Comment 5
2011-11-09 08:44:18 PST
(In reply to
comment #4
)
> Committed
r99691
: <
http://trac.webkit.org/changeset/99691
>
It broke the GTK build: ./.libs/libwebkitgtk-3.0.so: undefined reference to `WebCoreTestSupport::resetInternalsObject(OpaqueJSContext const*)'
Philippe Normand
Comment 6
2011-11-09 08:54:28 PST
(In reply to
comment #5
)
> (In reply to
comment #4
) > > Committed
r99691
: <
http://trac.webkit.org/changeset/99691
> > > It broke the GTK build: > > ./.libs/libwebkitgtk-3.0.so: undefined reference to `WebCoreTestSupport::resetInternalsObject(OpaqueJSContext const*)'
A clean build is in progress to confirm that. It passed on the Debug bots though...
Philippe Normand
Comment 7
2011-11-09 11:07:22 PST
Turns out this broke non GNU-Gold builds. Sorry! Working on a follow-up patch
Philippe Normand
Comment 8
2011-11-09 11:55:15 PST
Created
attachment 114334
[details]
updated patch
Martin Robinson
Comment 9
2011-11-09 12:05:55 PST
Comment on
attachment 114334
[details]
updated patch View in context:
https://bugs.webkit.org/attachment.cgi?id=114334&action=review
Thank you!
> Tools/DumpRenderTree/gtk/DumpRenderTree.cpp:727 > + JSGlobalContextRef globalContext = webkit_web_frame_get_global_context(mainFrame); > + WebCoreTestSupport::resetInternalsObject(globalContext);
Can probably just be one line.
Philippe Normand
Comment 10
2011-11-09 12:11:22 PST
Committed
r99748
: <
http://trac.webkit.org/changeset/99748
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug