[GTK][DRT] window internals object is not reset after each test https://bugs.webkit.org/show_bug.cgi?id=71890

Reviewed by Xan Lopez.

Source/WebKit/gtk:

DRTSupport infrastructure to reset the Internals object, like in Qt.

* WebCoreSupport/DumpRenderTreeSupportGtk.cpp:
(DumpRenderTreeSupportGtk::resetInternalsObject):
* WebCoreSupport/DumpRenderTreeSupportGtk.h:

Tools:

* DumpRenderTree/gtk/DumpRenderTree.cpp:
(runTest): reset the Internals object after each test.

git-svn-id: svn://svn.chromium.org/blink/trunk@99691 bbb929c8-8fbe-4397-9dbb-9b2b20218538