Tools/DumpRenderTree/gtk/DumpRenderTree.cpp
@@ -723,6 +723,8 @@ static void runTest(const string& testPathOrURL)
         webViewList = 0;
     }
 
+    DumpRenderTreeSupportGtk::resetInternalsObject(mainFrame);
+
     // A blank load seems to be necessary to reset state after certain tests.
     webkit_web_view_open(webView, "about:blank");
 
